Automatically backed up by Learn

--- a/index.html
+++ b/index.html
@@ -33,6 +33,7 @@
         
 <p><span>PHARRELLWILLIAMS.COM</span></p>
         <!-- display the images hosted on [https://s3.amazonaws.com/learn-verified/columbia-logo.png] -->
+        <img
 <p><span>COLUMBIARECORDS.COM</span></p>
         <!-- span text 'COLUMBIARECORDS.COM' -->
 
